@@ -80,6 +80,9 @@ a NULL pattern pointer when Unicode support is available.
 were longer than 64 code units could cause a buffer overflow. This was a bug in 
 pcre2test.
 
+14. The alternative matching function, pcre2_dfa_match() misbehaved if it 
+encountered a character class with a possessive repeat, for example [a-f]{3}+.
+
 
 Version 10.23 14-February-2017
 ------------------------------
